Delete API POC
