# dms-moi-workspace/modules/liferay-devcon-appointment/liferay-devcon-appointment-api/src/main/java/com/liferay/appointments/resource/v1_0/AppointmentResource.java
@@ -48,6 +48,10 @@ public interface AppointmentResource {
 			Long siteId, MultipartBody multipartBody)
 		throws Exception;
 
+	public SiteDocument getSiteAppointmentDocument(
+			String ModuleType, String DocumentType, String Identifier)
+		throws Exception;
+
 	public default void setContextAcceptLanguage(
 		AcceptLanguage contextAcceptLanguage) {
 	}
